# FATEC-API-6-SEMESTRE

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: app.py  pyproject.toml  settings.py
backend/core/: calculate_pt_and_pnt.py
backend/docs/: estrutura_basica.md  guia_instalação.md  sessao_mapa_calor_score.md
backend/email/: envio_email.py
backend/migrations/versions/: 023e7dca5371_create_users_table.py
backend/routes/: email.py  tam.py
backend/services/: calculate_sam.py  calculo_tam.py  criticidade.py  pipeline_trigger.py  render_criticidade.py  render_tam.py
backend/tasks/: celery_app.py  task_criticidade.py  task_load_dec_fec.py  task_process_layers.py  task_render_criticidade.py  task_render_pt_and_pnt.py  task_tam.py
backend/tests/: conftest.py  test_app.py  test_db.py  test_distributors.py  test_route_pipeline_trigger.py  test_send_email.py  test_tam.py  test_task_render_criticidade.py  test_task_render_pt_and_pnt.py  test_users.py
docs/process/: requisitos.md
docs/process/sprints-backlog/: sprint-1.md  sprint-2.md
docs/process/sprints-burndown/: doc-burndown-process.md
frontend/: hello.html
